minor optimizations to ringshapemechanic